--- a/xxx.html
+++ b/xxx.html
@@ -725,7 +725,7 @@ document.addEventListener('contextmenu', function(e) {
                 } else {
                     document.getElementById('qrExpiredContainer').classList.add('hidden');
                 // 返回到首页或显示提示
-                    window.location.href = 'https://39fh.cn/';
+                    window.location.href = 'https://39fh.cn';
                 }
             });
         });
